~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.6 version:

*

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.5 version:

* Added 'postgresql-upgrade <DATADIR>' command.  This is similar to
  'postgresql-setup --upgrade', but is useful to upgrade DATADIR for
  PostgreSQL servers which were run a non-standard way (under non-standard
  user, or without systemd service).  Typical use-case can be to migrate
  database for KDE's Akonadi server;  it is running it's own PostgreSQL server
  with datadir in user's ~/.local/ directory (under user's UID process).

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.4 version:

* Reformatted glibc collation warning after pg_upgrade.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.3 version:

* postgresql-setup prints warning about possible glibc collation on
  successful upgrade.

* postgresql-setup creates correct 'log_directory' based on PG version
  (the default changed from $datadir/pg_log to $datadir/log in v10).

* Modular PostgreSQL builds can provide/depend on
  postgresql-server(:MODULE_COMPAT_11<some_suffix>) instead of
  postgresql-server(:MODULE_COMPAT_11) to avoid clash with non-modular
  builds.

* Fixed ExecStart= statement in systemd's service files for Software
  Collections where we need to first do `source scl_source COLLECTION ;`
  before we execute postmaster.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.2 version:

* %postgresql_tests_* macros now use random port for the test PostgreSQL
  server.  This helps in Koji build system where multiple builds of the
  same package can happen concurrently on one host and using the same
  port would make random build failures.

* If the testing server fails, the %postgresql_tests_* macros print the
  error log out for easier debugging.
