@@ -460,12 +460,13 @@ handle_pgconf()
     }
 
     local sp='[[:space:]]'
-    local sed_expr="s/^$sp*port$sp*=$sp\([0-9]\+\).*/\1/p"
+    local sed_expr_port="s/^$sp*port$sp*=$sp*\([0-9]\+\).*/\1/p"
+    local sed_expr_pgdata="s/^$sp*data_directory$sp*=\(.*\)/\1/p"
 
-    rv=0
-    conf_pgport=`sed -n "$sed_expr" $conffile | tail -1` || rv=1
+    conf_pgport=`sed -n "$sed_expr_port" $conffile | tail -1`
+    conf_pgdata=`sed -n "$sed_expr_pgdata" $conffile | tail -1`
     test -n "$conf_pgport" && debug "postgresql.conf pgport: $conf_pgport"
-    return $rv
+    test -n "$conf_pgdata" && debug "postgresql.conf pgdata (data_directory): $conf_pgdata"
 }
 
 
@@ -735,6 +736,19 @@ if test upgrade = "$option_mode"; then
                           "$option_upgradefrom_unit"
     test -n "$option_port" -a "$option_port" != "$pgport" \
         && warn "Old pgport $pgport has bigger priority than --pgport value."
+fi
+
+# Check for data_directory entry in config file
+# valid entry means that custom PGDATA path is present which is not supported
+# BZ (#1935301)
+if test -n "$conf_pgdata"; then
+    error   $"data_directory field in configuration file is not supported."
+    error_q $"db datadir (PGDATA) needs to be specified exclusively in service/unit"
+    error_q $"file as an Environment variable."
+    error_q $"In order to use this script, please remove data_directory entry from"
+    error_q $"configuration file and make sure that the default location"
+    error_q $"(PGDATA) in .service file is valid."
+    exit 1
 fi
 
 # We expect that for upgrade - the previous stack was in working state (thus
